[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/entities/player/player.gd" type="Script" id=1]

[sub_resource type="Animation" id=3]
resource_name = "Battle Transition"
length = 0.8
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Camera:translation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 3.86374, 0.277392, 2.92817 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, -0.7, -0.3 ), Vector3( 0, -0.7, -0.5 ), Vector3( 0, -0.7, 0.7 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Camera:fov")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25, 0.8 ),
"transitions": PoolRealArray( 1, 1, 2.92 ),
"update": 0,
"values": [ 70.0, 70.0, 90.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Bobbing"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Camera:translation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0.05, 0 ), Vector3( 0, -0.05, 0 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Camera:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Camera:fov")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 70.0 ]
}

[node name="Player" type="Spatial"]
script = ExtResource( 1 )

[node name="Camera" type="Camera" parent="."]

[node name="FrontCast" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 0, 0, -2 )

[node name="BackCast" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 0, 0, 2 )

[node name="FloorCast" type="RayCast" parent="."]
enabled = true

[node name="Light" type="OmniLight" parent="."]
light_energy = 0.25

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "RESET"
"anims/Battle Transition" = SubResource( 3 )
anims/Bobbing = SubResource( 2 )
anims/RESET = SubResource( 1 )
